content provider working for single file sends

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
 
         <provider
-            android:authorities="com.jgreenb2.gmailattach.provider"
+            android:authorities="com.jgreenb2.selfieattach.provider"
             android:name=".JpegContentProvider"
             android:grantUriPermissions="true"
             />
