--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,14 @@
 
         <provider
             android:authorities="com.jgreenb2.selfieattach.provider"
-            android:name=".JpegContentProvider"
+            android:name="android.support.v4.content.FileProvider"
             android:grantUriPermissions="true"
-            />
-
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"
+                />
+        </provider>
         <receiver android:name=".AlarmReceiver" >
         </receiver>
     </application>
